[gd_scene load_steps=9 format=3 uid="uid://bdv7yj8yfj5og"]

[ext_resource type="Script" uid="uid://cq8rtduq484g4" path="res://scripts/combat/BattleScene.gd" id="1"]
[ext_resource type="Script" uid="uid://nvibru871jlh" path="res://scripts/combat/EntitySpawner.gd" id="2"]
[ext_resource type="Script" uid="uid://b5cwffuge23v4" path="res://scripts/combat/BattleManager.gd" id="3"]
[ext_resource type="Script" uid="uid://cs6ru73blvlim" path="res://scripts/combat/TurnManager.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://c47ocrerjdecf" path="res://scenes/ui/InitiativeBar.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cbdpn411f2t67" path="res://scenes/ui/UnitCard.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://bry7otmjfpgb1" path="res://assets/missing_asset.png" id="7_5282s"]
[ext_resource type="Script" uid="uid://sfmf3nxsd1bq" path="res://scripts/combat/Camera2DCustom.gd" id="8"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1")

[node name="World" type="Node2D" parent="."]

[node name="Spawner" type="Node" parent="World"]
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="World"]
script = ExtResource("8")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("3")

[node name="TurnManager" type="Node" parent="BattleManager"]
script = ExtResource("4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InitiativeBar" parent="CanvasLayer/UI" instance=ExtResource("5")]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -200.0
offset_right = 200.0
offset_top = 10.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
clip_contents = true
alignment = 1
fallback_icon = ExtResource("7_5282s")

[node name="UnitCard" parent="CanvasLayer/UI" instance=ExtResource("6")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -218.0
offset_top = 80.0
offset_right = -10.0
offset_bottom = 160.0
fallback_icon = ExtResource("7_5282s")
